--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -6,8 +6,7 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		//classpath('gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.13.0')
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")s
 		classpath "se.transmode.gradle:gradle-docker:1.2"
 	}
 }
@@ -15,7 +14,6 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
-//apply plugin: 'com.palantir.docker'
 apply plugin: 'docker'
 
 
@@ -27,14 +25,6 @@ repositories {
 	mavenCentral()
 }
 
-/*
-docker {
-    name "${project.group}/${jar.baseName}"
-    files jar.archivePath
-    buildArgs(['JAR_FILE': "${jar.archiveName}"])
-}
-
-*/
 
 task buildDocker(type: Docker) {
   baseImage = 'openjdk:8-jdk-alpine'
