--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -4,9 +4,11 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
+                url "https://plugins.gradle.org/m2/"
 	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")s
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+                classpath "gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.13.0"
 		classpath "se.transmode.gradle:gradle-docker:1.2"
 	}
 }
@@ -14,6 +16,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'com.palantir.docker'
 apply plugin: 'docker'
 
 
@@ -24,6 +27,14 @@ sourceCompatibility = 1.8
 repositories {
 	mavenCentral()
 }
+
+
+task docker(type: Docker) {
+    name "${project.group}/${jar.baseName}"
+    files jar.archivePath
+    buildArgs(['JAR_FILE': "${jar.archiveName}"])
+}
+
 
 
 task buildDocker(type: Docker) {
@@ -49,5 +60,6 @@ dependencies {
 }
 
 //https://geowarin.github.io/spring-boot-app-in-docker-image.html
+//https://spring.io/guides/gs/spring-boot-docker/
 
 
